# tes23-labor-echtzeitsysteme-b-Labor-Echtzeitsysteme-v2

./: .gitattributes  README.md
assets/software/: .gitignore  gnu-tools-for-stm32.11.3.rel1.win32_1.1.1.202309131626.7z  start_winIDEA_Debugger.bat  winIDEA_x64_9_21_268_184034.7z
docs/tasks/Task1/: aufgabenabgabe_task1.md  aufgabenbeschreibung_task1.md
docs/tasks/Task2/: aufgabenabgabe_task2.md  aufgabenbeschreibung_task2.md
docs/tasks/Task3/: aufgabenabgabe_task3.md  aufgabenbeschreibung_task3.md
docs/tasks/Task4/: aufgabenabgabe_task4.md  aufgabenbeschreibung_task4.md
docs/tasks/Task5/: aufgabenabgabe_task5.md  aufgabenbeschreibung_task5.md
docs/tasks/Task6/: aufgabenabgabe_task6.md  aufgabenbeschreibung_task6.md
docs/tasks/Task7/: aufgabenabgabe_task7.md  aufgabenbeschreibung_task7.md
docs/tasks/Task8/: aufgabenabgabe_task8.md  aufgabenbeschreibung_task8.md
docs/voraussetzungen/: clion_installation.md
src/: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Labor-Echtzeitsysteme.ioc  STM32U575xx_RAM.ld  toolchain.cmake
src/Core/Inc/: FreeRTOSConfig.h  app_freertos.h  fmc.h  main.h  mdf.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  tamp.h  tsc.h  usart.h
src/Core/Src/: adc.c  app_freertos.c  dcmi.c  fmc.c  gpio.c  i2c.c  main.c  mdf.c  octospi.c  rtc.c  sai.c  sdmmc.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c  tamp.c  tsc.c  ucpd.c  usart.c  usb_otg.c
src/Debugger/: LaborEchtzeitsysteme.xgrf  LaborEchtzeitsysteme.xjrf  LaborEchtzeitsysteme.xqrf
src/Tasks/: general_tasks_include.h  tasks.c  tasks.h
src/Tasks/Task1/: task1.c  task1.h
src/Tasks/Task2/: task2.c  task2.h
src/Tasks/Task3/: task3.c  task3.h
src/Tasks/Task4/: task4.c  task4.h
src/Tasks/Task5/: task5.c  task5.h
src/Tasks/Task6/: task6.c  task6.h
src/Tasks/Task7/: task7.c  task7.h
src/Tasks/Task8/: task8.c  task8.h
src/cmake/: gcc-arm-none-eabi.cmake
src/cmake/stm32cubemx/: CMakeLists.txt
